assets/css/main.css
@import url("font-awesome.min.css");
@import url("animations.css");

@font-face {
  font-family: 'Vonique';
  src: url('../fonts/vonique-64.ttf') format('truetype');
}

html,
body,
div,
span,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
abbr,
img,
strong,
ol,
ul,
li,
form,
label,
article,
aside,
footer,
header,
nav,
section,
audio,
video,
button {
  background: inherit;
  border: 0;
  color: black;
  display: block;
  font-size: 100%;
  font-family: sans-serif;
  font: inherit;
  list-style: none;
  margin: 0;
  outline: inherit;
  padding: 0;
  text-decoration: none;
  vertical-align: baseline;
}

.clearfix:after {
  content: '';
  clear: both;
  display: block;
}

/*MODAL*/

.modal {
  position: fixed;
  width: 100%;
  z-index: 10;
  transition: opacity 0.8s, height 0s;
  overflow: hidden;
}
.modal.hide {
  opacity: 0;
  height: 0;
  transition: opacity 0.8s, height 0s linear 0.8s;
}
.modal.show {
  opacity: 1;
  height: 100%;
  transition: opacity 0.8s, height 0s;
}

  .modal__overlay {
    background-color: black;
    cursor: pointer;
    height: 100%;
    opacity: 0.9;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
  }

  .modal__video-container-outer {
    position: relative;
    top: 50%;
    left: 50%;
    width: 100%;
    max-width: 640px;
    z-index: 2;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform:    translate(-50%, -50%);
    -ms-transform:     translate(-50%, -50%);
    -o-transform:      translate(-50%, -50%);
    transform:         translate(-50%, -50%);
  }

    .modal__video-container-inner {
      position: relative;
      width: 100%;
      padding-top: 56.25%;
    }

      .vimeo-iframe {
        position: absolute;
        height: 100%;
        width: 100%;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
      }

/*CONTENT*/

.content {
  padding-left: 60px;
  padding-right: 60px;
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  font-family: sans-serif;
}
@media (max-width: 1000px) {
  .content {
    padding-left: 20px;
    padding-right: 20px;
  }
}
@media (max-width: 700px) {
  .content {
    padding-left: 5px;
    padding-right: 5px;
  }
}


  .top-nav {
    height: 70px;
    padding-left: 160px;
    position: relative;
    border-bottom: 1px solid #ccc;
    margin-bottom: 25px;
  }
  @media (max-width: 700px) {
    .top-nav {
      padding: 0;
      height: auto;
    }
  }

    .site-logo {
      height: 50px;
      position: absolute;
      left: 0;
      top: 50%;
      -webkit-transform: translateY(-50%);
      -moz-transform:    translateY(-50%);
      -ms-transform:     translateY(-50%);
      -o-transform:      translateY(-50%);
      transform:         translateY(-50%);
    }
    @media (max-width: 700px) {
      .site-logo {
        display: block;
        width: 145px;
        left: 0;
        margin-left: auto;
        margin-right: auto;
        position: static;
        margin-bottom: 15px;
        margin-top: 10px;
        -webkit-transform: none;
        -moz-transform:    none;
        -ms-transform:     none;
        -o-transform:      none;
        transform:         none;
      }
    }

    .nav-buttons {
      position: relative;
      height: 100%;
    }
    @media (max-width: 700px) {
      .nav-buttons{
        margin-left: auto;
        margin-right: auto;
        width: 158px;
      }
    }

    .nav-button {
      cursor: pointer;
      float: left;
      font-family: Vonique;
      font-size: 12px;
      letter-spacing: 1px;
      padding-left: 15px;
      padding-right: 15px;
      position: relative;
      text-align: center;
      text-transform: uppercase;
      top: 50%;
      transition: all 0.5s;
      -webkit-transform: translateY(-50%);
      -moz-transform:    translateY(-50%);
      -ms-transform:     translateY(-50%);
      -o-transform:      translateY(-50%);
      transform:         translateY(-50%);
    }
    @media (max-width: 700px) {
      .nav-button{
        padding-bottom: 10px;
        padding-left: 10px;
        padding-right: 10px;
        -webkit-transform: none;
        -moz-transform:    none;
        -ms-transform:     none;
        -o-transform:      none;
        transform:         none;
      }
    }

    .nav-button:hover {
      color: #7d7d7d;
    }

    @media (max-width: 700px) {
      .video-filter {
        display: none;
      }
    }

  .videos {
  }

    .video-thumbnail {
      box-sizing: border-box;
      cursor: pointer;
      float: left;
      overflow: hidden;
      padding-left: 1px;
      padding-top: 1px;
      padding-bottom: 1px;
      padding-right: 1px;
      width: 33.33%;
    }
    @media (max-width: 1000px) {
      .video-thumbnail {
        width: 50%;
      }
    }
    @media (max-width: 700px) {
      .video-thumbnail {
        padding-bottom: 80px;
        padding-left: 5px;
        padding-right: 5px;
      }
    }

    .video-thumbnail__outer {
      overflow: hidden;
    }
    @media (max-width: 700px) {
      .video-thumbnail__outer {
        overflow: visible;
      }
    }

      .video-thumbnail__inner {
        transition: all 0.5s;
        position: relative;
      }

      .video-thumbnail__inner:hover {
        -webkit-transform: scale(1.1);
        -moz-transform:    scale(1.1);
        -ms-transform:     scale(1.1);
        -o-transform:      scale(1.1);
        transform:         scale(1.1);
      }
      @media (max-width: 700px) {
        .video-thumbnail__inner:hover {
          -webkit-transform: none;
          -moz-transform:    none;
          -ms-transform:     none;
          -o-transform:      none;
          transform:         none;
        }
      }

      .video-thumbnail__inner::before {
        height: 100%;
        opacity: 0;
        position: absolute;
        transition: all 0.5s;
        width: 100%;
        content: '';
        display: block;
      }

      .video-thumbnail__title {
        color: black;
        font-size: 12px;
        left: 50%;
        line-height: 14px;
        opacity: 0;
        position: absolute;
        text-align: center;
        text-transform: uppercase;
        top: 50%;
        transition: all 0.5s;
        -webkit-transform: translate(-50%, -50%);
        -moz-transform:    translate(-50%, -50%);
        -ms-transform:     translate(-50%, -50%);
        -o-transform:      translate(-50%, -50%);
        transform:         translate(-50%, -50%);
      }
      @media (max-width: 700px) {
        .video-thumbnail__title {
          display: inline-block;
          font-size: 10px;
          opacity: 1;
          bottom: 0;
          width: 100%;
          -webkit-transform: translate(-50%, 115%);
          -moz-transform:    translate(-50%, 115%);
          -ms-transform:     translate(-50%, 115%);
          -o-transform:      translate(-50%, 115%);
          transform:         translate(-50%, 115%);
        }
      }

        .video-thumbnail__title__copy {
          display: block;
        }

        .video-thumbnail__title__line {
          border-color: black;
          border-bottom: none;
          width: 40px;
        }

      /*Darkens other video thumbnails*/
      /*.commercials .video-thumbnail__inner:before,
      .music-videos .video-thumbnail__inner:before,
      .narratives .video-thumbnail__inner:before {
        background-color: black;
        opacity: 0.8;
      }*/

      .video-thumbnail__inner:hover.video-thumbnail__inner::before {
        background-color: white;
        opacity: 0.6;
      }
      @media (max-width: 700px) {
        .video-thumbnail__inner:hover.video-thumbnail__inner::before {
          opacity: 0;
        }
      }

      .commercials .sk2-video::before,
      .commercials .npf-video::before,
      .commercials .syg-video::before,
      .commercials .gillette-video::before,
      .commercials .unload-video::before,
      .music-videos .wdl-video::before,
      .music-videos .crazy-video::before,
      .music-videos .silva-video::before,
      .narratives .apotb-video::before {
        background-color: white;
        opacity: 0.4;
      }
      .video-thumbnail__inner:hover .video-thumbnail__title,
      .commercials .sk2-video .video-thumbnail__title,
      .commercials .npf-video .video-thumbnail__title,
      .commercials .syg-video .video-thumbnail__title,
      .commercials .gillette-video .video-thumbnail__title,
      .commercials .unload-video .video-thumbnail__title,
      .music-videos .wdl-video .video-thumbnail__title,
      .music-videos .crazy-video .video-thumbnail__title,
      .music-videos .silva-video .video-thumbnail__title,
      .narratives .apotb-video .video-thumbnail__title {
        opacity: 1;
      }

        .video-thumbnail__image {
          width: 100%;
        }

  .footer {
    color: #666;
    font-size: 12px;
    margin-top: 50px;
    margin-bottom: 30px;
    text-align: center;
  }



/*ABOUT*/

.bio {
  margin-top: 50px;
  margin-bottom: 5px;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}
@media (max-width: 700px) {
  .bio {
    margin-top: 10px;
  }
}

  .bio__image {
    float: left;
    width: 43%;
    padding-right: 30px;
  }

  .bio__copy {
    float: left;
    width: 50%;
  }
  @media (max-width: 700px) {
    .bio__image {
      float: none;
      margin-bottom: 10px;
      margin-left: auto;
      margin-right: auto;
      padding-right: 0;
      width: 80%;
    }
    .bio__copy {
      float: none;
      width: 100%;
      text-align: justify;
    }
  }

    .bio__copy__paragraph {
      margin-bottom: 20px;
      font-size: 12px;
      line-height: 17px;
    }

.awards {
  text-align: center;
}

  .awards__title {
    font-size: 16px;
    margin-bottom: 10px;
    text-decoration: underline;
  }

  .award {
    font-size: 12px;
    line-height: 17px;
  }



  /*CONTACT*/

  .contact {
    position: relative;
    margin-left: auto;
    margin-right: auto;
  }

    .contact__image {
      float: left;
      width: 50%;
      padding-right: 50px;
    }

    .contact__info {
      max-width: 250px;
      margin-left: auto;
      margin-right: auto;
      margin-top: 30px;
      text-align: center;
      position: relative;
      min-height: 600px;
    }
    @media (max-width: 700px) {
      .contact__info {
        min-height: 400px;
      }
    }

      .contact__info__tool-of-na {
      }

        .contact__info__tool-of-na__title,
        .contact__info__direct__title {
          font-size: 14px;
          margin-bottom: 5px;
          text-transform: uppercase;
        }

        .contact__info__tool-of-na__logo {
          margin-bottom: 10px;
          width: 100px;
          margin-left: auto;
          margin-right: auto;
        }

        .contact__info__tool-of-na__email,
        .contact__info__direct__email {
          font-size: 13px;
          line-height: 16px;
          color: #666;
        }

        .contact__info__tool-of-na__phone {
          font-size: 13px;
          line-height: 16px;
        }

      .contact__info__divider {
        margin-top: 30px;
        margin-bottom: 30px;
      }

